Fix for row x-position on mobile

--- a/assets/index.css
+++ b/assets/index.css
@@ -84,7 +84,7 @@
     z-index: 7;
     top: 128px;
     padding-right: 233px;
-    padding-left: 0;
+    padding-left: 115px;
 }
 
 .banner-row div {
